--- a/index.html
+++ b/index.html
@@ -36,33 +36,33 @@
     <main>
       <!--1 Заказ услуг-->
       <section class="section section-one">
-        <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="main-title">Ефективні рішення для<br />вашого бізнесу</h1>
         <button type="button" class="main-button">Замовити послугу</button>
       </section>
       <!--2 Особенности студии-->
-      <section class="section-two">
+      <section class="section section-two">
         <div class="container">
           <h2 hidden>Особливості студії</h2>
-          <ul class="list">
-            <li>
+          <ul class="feature list">
+            <li class="item">
               <h3 class="subtitle-two">Увага до деталей</h3>
               <p class="text text-two">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="subtitle-two">Пунктуальність</h3>
               <p class="text text-two">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="subtitle-two">Планування</h3>
               <p class="text text-two">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="subtitle-two">Сучасні технології</h3>
               <p class="text text-two">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -72,10 +72,10 @@
         </div>
       </section>
       <!--3 Чем мы занимаемся-->
-      <section class="section-three">
+      <section class="section section-three">
         <div class="container">
           <h2 class="title-section">Чим ми займаємося</h2>
-          <ul class="list">
+          <ul class="work list">
             <li class="item">
               <img src="./images/work-example-first.jpg" alt="Програмування" width="370" />
             </li>
@@ -89,29 +89,37 @@
         </div>
       </section>
       <!--4 Наша команда-->
-      <section class="section-four">
+      <section class="section section-four">
         <div class="container">
           <h2 class="title-section">Наша команда</h2>
-          <ul class="list">
+          <ul class="team list">
             <li class="item">
               <img src="./images/team-photo-one.jpg" alt="Фото співробітника" width="270" />
-              <h3 class="subtitle-four">Ігор Дем'яненко</h3>
-              <p class="text text-four">Product Designer</p>
+              <div class="team-photo">
+                <h3 class="subtitle-four">Ігор Дем'яненко</h3>
+                <p class="text text-four">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/team-photo-two.jpg" alt="Фото співробітника" width="270" />
-              <h3 class="subtitle-four">Ольга Рєпіна</h3>
-              <p class="text text-four">Frontend Developer</p>
+              <div class="team-photo">
+                <h3 class="subtitle-four">Ольга Рєпіна</h3>
+                <p class="text text-four">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/team-photo-three.jpg" alt="Фото співробітника" width="270" />
-              <h3 class="subtitle-four">Микола Тарасов</h3>
-              <p class="text text-four">Marketing</p>
+              <div class="team-photo">
+                <h3 class="subtitle-four">Микола Тарасов</h3>
+                <p class="text text-four">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/team-photo-four.jpg" alt="Фото співробітника" width="270" />
-              <h3 class="subtitle-four">Михайло Єрмаков</h3>
-              <p class="text text-four">UI Designer</p>
+              <div class="team-photo">
+                <h3 class="subtitle-four">Михайло Єрмаков</h3>
+                <p class="text text-four">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -122,8 +130,8 @@
       <div class="container">
         <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
         <address>
-          <ul class="list">
-            <li>
+          <ul class="list list-address">
+            <li class="item">
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                 target="_blank"
@@ -132,8 +140,12 @@
                 >м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
-            <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
