--- a/portfolio.html
+++ b/portfolio.html
@@ -35,100 +35,118 @@
     </header>
     <!--Портфоліо-->
     <main>
-      <section class="section-portfolio">
+      <section class="section section-portfolio">
         <div class="container">
           <h1 hidden>Проекти вебстудії</h1>
-          <ul class="list">
-            <li>
+          <ul class="filter list">
+            <li class="item">
               <button type="button" class="button">Усі</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button">Веб-сайти</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button">Додатки</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button">Дизайн</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="list">
-            <li>
+          <ul class="portfolio-list list">
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img src="./images/website-one.jpg" alt="Веб-сайт Технокряк" width="370" />
-                <h2 class="subtitle">Технокряк</h2>
-                <p class="text portfolio">Веб-сайт</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Технокряк</h2>
+                  <p class="text portfolio">Веб-сайт</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img
                   src="./images/design-one.jpg"
                   alt="Дизайн Постер New Orlean vs Golden Star"
                   width="370"
                 />
-                <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
-                <p class="text portfolio">Дизайн</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
+                  <p class="text portfolio">Дизайн</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img src="./images/app-one.jpg" alt="Додаток Ресторан Seafood" width="370" />
-                <h2 class="subtitle">Ресторан Seafood</h2>
-                <p class="text portfolio">Додаток</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Ресторан Seafood</h2>
+                  <p class="text portfolio">Додаток</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img src="./images/marketing-one.jpg" alt="Маркетинг Проєкт Prime" width="370" />
-                <h2 class="subtitle">Проєкт Prime</h2>
-                <p class="text portfolio">Маркетинг</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Проєкт Prime</h2>
+                  <p class="text portfolio">Маркетинг</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img src="./images/app-two.jpg" alt="Додаток Проєкт Boxes" width="370" />
-                <h2 class="subtitle">Проєкт Boxes</h2>
-                <p class="text portfolio">Додаток</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Проєкт Boxes</h2>
+                  <p class="text portfolio">Додаток</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img
                   src="./images/website-two.jpg"
                   alt="Веб-сайт Inspiration has no Borders"
                   width="370"
                 />
-                <h2 class="subtitle">Inspiration has no Borders</h2>
-                <p class="text portfolio">Веб-сайт</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Inspiration has no Borders</h2>
+                  <p class="text portfolio">Веб-сайт</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img
                   src="./images/design-two.jpg"
                   alt="Дизайн Видання Limited Edition"
                   width="370"
                 />
-                <h2 class="subtitle">Видання Limited Edition</h2>
-                <p class="text portfolio">Дизайн</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Видання Limited Edition</h2>
+                  <p class="text portfolio">Дизайн</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img src="./images/marketing-two.jpg" alt="Маркетинг Проєкт LAB" width="370" />
-                <h2 class="subtitle">Проєкт LAB</h2>
-                <p class="text portfolio">Маркетинг</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Проєкт LAB</h2>
+                  <p class="text portfolio">Маркетинг</p>
+                </div></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-potrfolio"
                 ><img src="./images/app-three.jpg" alt="Додаток Growing Business" width="370" />
-                <h2 class="subtitle">Growing Business</h2>
-                <p class="text portfolio">Додаток</p></a
+                <div class="project-name">
+                  <h2 class="subtitle">Growing Business</h2>
+                  <p class="text portfolio">Додаток</p>
+                </div></a
               >
             </li>
           </ul>
@@ -140,8 +158,8 @@
       <div class="container">
         <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
         <address>
-          <ul class="list">
-            <li>
+          <ul class="list list-address">
+            <li class="item">
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                 target="_blank"
@@ -150,8 +168,12 @@
                 >м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
-            <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
