Корректирует стилизацию (блоки, отступы, рамки) всего проекта

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="nav">
           <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link-nav">Студія</a></li>
+            <li><a href="./index.html" class="link-nav current">Студія</a></li>
             <li><a href="./portfolio.html" class="link-nav">Портфоліо</a></li>
             <li><a href="" class="link-nav">Контакти</a></li>
           </ul>
@@ -36,7 +36,7 @@
     <main>
       <!--1 Заказ услуг-->
       <section class="section section-one">
-        <h1 class="main-title">Ефективні рішення для<br />вашого бізнесу</h1>
+        <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="main-button">Замовити послугу</button>
       </section>
       <!--2 Особенности студии-->
@@ -130,7 +130,7 @@
       <div class="container">
         <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
         <address>
-          <ul class="list list-address">
+          <ul class="list">
             <li class="item">
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
@@ -140,7 +140,7 @@
                 >м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
-            <li class="item">
+            <li class="item item-mail">
               <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
             </li>
             <li class="item">
