--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
           <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
           <ul class="site-nav list">
             <li><a href="./index.html" class="link-nav">Студія</a></li>
-            <li><a href="./portfolio.html" class="link-nav">Портфоліо</a></li>
+            <li><a href="./portfolio.html" class="link-nav current">Портфоліо</a></li>
             <li><a href="" class="link-nav">Контакти</a></li>
           </ul>
         </nav>
@@ -158,7 +158,7 @@
       <div class="container">
         <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
         <address>
-          <ul class="list list-address">
+          <ul class="list">
             <li class="item">
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
@@ -168,7 +168,7 @@
                 >м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
-            <li class="item">
+            <li class="item item-mail">
               <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
             </li>
             <li class="item">
