Добавляет паттерн visually-hidden для скрытия заголовков

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!--2 Особенности студии-->
       <section class="section section-two">
         <div class="container">
-          <h2 hidden>Особливості студії</h2>
+          <h2 class="visually-hidden">Особливості студії</h2>
           <ul class="feature list">
             <li class="item">
               <h3 class="subtitle-two">Увага до деталей</h3>
