--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     <main>
       <section class="section section-portfolio">
         <div class="container">
-          <h1 hidden>Проекти вебстудії</h1>
+          <h1 class="visually-hidden">Проекти вебстудії</h1>
           <ul class="filter list">
             <li class="item">
               <button type="button" class="button">Усі</button>
